More emblem conversion

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,7 @@
 
 @import "data_point";
 @import "rescue_time_dp";
+@import "sp_day";
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,500,600,700);
 .caption {
   font-weight: bold;
@@ -17,4 +18,8 @@
 
 .dirty {
   border: red 1px dashed;
+}
+
+body {
+  font-family: "Source Sans Pro";
 }
