--- a/app/assets/stylesheets/sp_day.css.scss
+++ b/app/assets/stylesheets/sp_day.css.scss
@@ -1,12 +1,12 @@
-$spDayWidth: 700px;
+//$spDayWidth: 700px;
 
 .sp-day {
   position: relative;
-  width: $spDayWidth;
-  border: 1px solid $grayLightest1;
-  border-radius: 3px;
-  padding: 3px;
-  margin: 3px;
+  // width: $spDayWidth;
+  // border: 1px solid $grayLightest1;
+  // border-radius: 3px;
+  // padding: 3px;
+  // margin: 3px;
 
   span.options {
     position: relative;
@@ -28,15 +28,15 @@ $spDayWidth: 700px;
 }
 
 .sp-day-header {
-  margin: 0 auto;
   border-bottom: $grayDarkest;
-  text-align: center;
-  width: 450px;
+
+  // text-align: center;
+  // width: 450px;
 }
 
 .sp-day-title {
   color: black;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .sp-day-yesterday {
@@ -44,5 +44,12 @@ $spDayWidth: 700px;
 }
 .sp-day-tomorrow {
   float: right;
+}
+
+.sp-days {
+  btn.new-sp-day {
+    @include button-variant($btn-primary-color, $btn-primary-bg, $btn-primary-border);
+    @include button-size($padding-base-vertical, $padding-base-horizontal, $font-size-base, $line-height-base, $border-radius-base);
+  }
 }
 
