--- a/app/assets/javascripts/templates/data_point.hbs
+++ b/app/assets/javascripts/templates/data_point.hbs
@@ -4,6 +4,7 @@
   <a {{action "save"}}> Save * </a>
   {{/if}}
 </span>
+Submitted at: {{submittedAt}}
 {{humon-editor json=startedAt rootKey="Started at" downPressed="downPressed" upPressed="upPressed" focusLost="deactivateDataPointView" focusGained="activateDataPointView"}}
 {{humon-editor json=endedAt rootKey="Ended at" downPressed="downPressed" upPressed="upPressed" focusLost="deactivateDataPointView" focusGained="activateDataPointView"}}
 {{humon-editor json=details rootKey="Details" downPressed="downPressed" upPressed="upPressed" focusLost="deactivateDataPointView" focusGained="activateDataPointView"}}
