--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,7 +10,7 @@
 
 @import "data_point";
 @import "rescue_time_dp";
-@import "sp_day";
+@import "day";
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,500,600,700);
 .caption {
   font-weight: bold;
