Upgrade ember-source from 1.0.0 to 1.2. Updating templates to be 1.2 compliant: attributeBinding='asdf' requires quotes, and partials need to be called with quotes as well. Also partial templates need to start with an underscore

--- a/app/assets/javascripts/templates/_fixed_key_field.hbs
+++ b/app/assets/javascripts/templates/_fixed_key_field.hbs
@@ -1,1 +1,1 @@
-{{view "Sysys.KeyFixedField" rawValueBinding=view.nodeContent.nodeKey}}
+{{view "Sysys.KeyFixedField" rawValueBinding="view.nodeContent.nodeKey"}}
