Rework Nav to include different link-tos. Play around with router mapping styles. Add general loading template

--- a/app/assets/javascripts/templates/data_point.hbs
+++ b/app/assets/javascripts/templates/data_point.hbs
@@ -1,5 +1,5 @@
 <span class="options">
-  {{#link-to "dataPoint" this}} Perma link {{/link-to}}
+  {{link-to "Permalink" "data_point" this}}
   {{#if isDirty}}
   <a {{action "save"}}> Save * </a>
   {{/if}}
