Add loading styling and css

--- a/app/assets/javascripts/templates/loading.emblem.erb
+++ b/app/assets/javascripts/templates/loading.emblem.erb
@@ -1,6 +1,16 @@
-| <img src="http://f.cl.ly/items/0W0l3d1O1l171Y1p192N/activity%20indicator.gif" />
-| <img src="assets/loader.gif">
-| <img src="<%=image_path "loader.gif" %>">
-<br>
-| Loading
-= destination
+
+div.loading
+  div.bubblingG
+    span#bubblingG_1
+    span#bubblingG_2
+    span#bubblingG_3
+
+  / div.circleG
+    span#circleG_1
+    span#circleG_2
+    span#circleG_3
+
+  h4
+    | Loading
+    | &nbsp;
+    =destination
