--- a/app/assets/stylesheets/loading.css.scss
+++ b/app/assets/stylesheets/loading.css.scss
@@ -1,33 +1,12 @@
-@import "bootstrap";
-@import "jquery.ui.datepicker";
-@import "jquery.ui.slider";
-@import "font-awesome";
-
-@import "base";
-@import "nav";
-
-@import "humon/humon";
-
-@import "loading";
-
-@import "data_point";
-@import "rescue_time_dp";
-@import "day";
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,500,600,700);
-.caption {
-  font-weight: bold;
+.loading{
+  margin: 0 auto;
+  text-align: center;
+  .h4 {
+    }
 }
-
-.dirty {
-  border: red 1px dashed;
-}
-
-body {
-  font-family: "Source Sans Pro";
-}
-
 .bubblingG {
   text-align: center;
+  margin: 0 auto;
   width:80px;
   height:50px;
 }
@@ -157,147 +136,5 @@ body {
     background-color:#FFFFFF;
     transform: translateY(-21px);
   }
-
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-#circleG{
-  width:149.33333333333334px;
-}
-
-.circleG{
-  background-color:#FFFFFF;
-  float:left;
-  height:32px;
-  margin-left:17px;
-  width:32px;
-  -moz-animation-name:bounce_circleG;
-  -moz-animation-duration:0.75s;
-  -moz-animation-iteration-count:infinite;
-  -moz-animation-direction:linear;
-  -moz-border-radius:21px;
-  -webkit-animation-name:bounce_circleG;
-  -webkit-animation-duration:0.75s;
-  -webkit-animation-iteration-count:infinite;
-  -webkit-animation-direction:linear;
-  -webkit-border-radius:21px;
-  -ms-animation-name:bounce_circleG;
-  -ms-animation-duration:0.75s;
-  -ms-animation-iteration-count:infinite;
-  -ms-animation-direction:linear;
-  -ms-border-radius:21px;
-  -o-animation-name:bounce_circleG;
-  -o-animation-duration:0.75s;
-  -o-animation-iteration-count:infinite;
-  -o-animation-direction:linear;
-  -o-border-radius:21px;
-  animation-name:bounce_circleG;
-  animation-duration:0.75s;
-  animation-iteration-count:infinite;
-  animation-direction:linear;
-  border-radius:21px;
-}
-
-#circleG_1{
-  -moz-animation-delay:0.15s;
-  -webkit-animation-delay:0.15s;
-  -ms-animation-delay:0.15s;
-  -o-animation-delay:0.15s;
-  animation-delay:0.15s;
-}
-
-#circleG_2{
-  -moz-animation-delay:0.35s;
-  -webkit-animation-delay:0.35s;
-  -ms-animation-delay:0.35s;
-  -o-animation-delay:0.35s;
-  animation-delay:0.35s;
-}
-
-#circleG_3{
-  -moz-animation-delay:0.45s;
-  -webkit-animation-delay:0.45s;
-  -ms-animation-delay:0.45s;
-  -o-animation-delay:0.45s;
-  animation-delay:0.45s;
-}
-
-@-moz-keyframes bounce_circleG{
-  0%{
-}
-
-50%{
-  background-color:#000000}
-
-100%{
-}
-
-}
-
-@-webkit-keyframes bounce_circleG{
-  0%{
-}
-
-50%{
-  background-color:#000000}
-
-100%{
-}
-
-}
-
-@-ms-keyframes bounce_circleG{
-  0%{
-}
-
-50%{
-  background-color:#000000}
-
-100%{
-}
-
-}
-
-@-o-keyframes bounce_circleG{
-  0%{
-}
-
-50%{
-  background-color:#000000}
-
-100%{
-}
-
-}
-
-@keyframes bounce_circleG{
-  0%{
-}
-
-50%{
-  background-color:#000000}
-
-100%{
-}
 
 }
