Cleaning up humon_node templates: Rename humon_node to humon_node_list; remove old humon_types_*; update template names

--- a/app/assets/javascripts/templates/humon_node_list.hbs
+++ b/app/assets/javascripts/templates/humon_node_list.hbs
@@ -1,7 +1,4 @@
-{{!
-humon_node.hbs
-}}
-
+{{!  humon_node_list.hbs }}
 {{#each nodeChild in view.nodeContent.nodeVal.children}}
   {{view Sysys.HumonNodeView nodeContentBinding="nodeChild"}}
 {{/each}}
