--- a/app/assets/javascripts/templates/humon_node_hash.hbs
+++ b/app/assets/javascripts/templates/humon_node_hash.hbs
@@ -1,6 +1,4 @@
-{{!  humon_node.hbs }}
+{{!  humon_node_hash.hbs }}
 {{#each nodeChild in view.nodeContent.nodeVal.children}}
-  {{#with nodeChild}}
   {{view Sysys.HumonNodeView nodeContentBinding="nodeChild"}}
-  {{/with}}
 {{/each}}
