Clean up in preparation for big node overhaul. Remove humon_structures. Add metatemplate example in HumonUtils documentation.  Add notes to HumonValues. Fix humon_node_date and humon_node_literal partial calls to humon_icon. Comment out a bunch ContentField hotkey triggerse. Rename enter to enterPressed

--- a/app/assets/javascripts/templates/humon_node_date.hbs
+++ b/app/assets/javascripts/templates/humon_node_date.hbs
@@ -8,7 +8,7 @@ humon_node_date.hbs
     </span>
 
     <span class="node-detail node-icon">
-      {{partial humon_icon}}
+      {{partial "humon_icon"}}
     </span>
 
     <span class="node-detail">
