Standardizing coerceToValidJsonInput across primitive, list, hash, complex. Tweaking sleep: added attributes and let it default to complex template

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,7 +13,7 @@
 @import "data_point";
 @import "rescue_time_dp";
 @import "day";
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,500,600,700);
+// @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,500,600,700);
 .caption {
   font-weight: bold;
 }
