HumonUtils: tryJ2hnv refactor. Add BaseHumoNValue.tryJ2hnv, which decorates _j2hnv (the old j2hnv) by normalizing the json (normalizeJson) before psasing it to _j2hnv. Add metatemplate to debug view

--- a/app/assets/javascripts/templates/_humon_node_debug.hbs
+++ b/app/assets/javascripts/templates/_humon_node_debug.hbs
@@ -8,6 +8,8 @@
     <dd>{{view.nodeContent.nodeType}}</dd>
     <dt>  view.id </dt>
     <dd>{{view._id}}</dd>
+    <dt>  view.nodeContent.nodeMeta.name  </dt>
+    <dd>{{view.nodeContent.nodeMeta.name}}</dd>
   </dl>
 </span>
 <span class="node-detail class-name">
