Basic invalidation reason display is working

--- a/app/assets/javascripts/templates/humon_node_literal.hbs
+++ b/app/assets/javascripts/templates/humon_node_literal.hbs
@@ -8,3 +8,6 @@ humon_node_literal.hbs
   <span class="node-detail node-icon">
     {{partial "humon_icon"}}
   </span>
+  <span class="node-invalid-reason">
+    {{view.nodeContent.invalidReason}}
+  </span>
