--- a/app/assets/javascripts/templates/humon_node_date.hbs
+++ b/app/assets/javascripts/templates/humon_node_date.hbs
@@ -1,16 +1,20 @@
 {{!
 humon_node_date.hbs
 }}
-    {{view "Sysys.ValEditableField" rawValueBinding="view.templateStrings.asString" }}
+{{view "Sysys.ValEditableField" rawValueBinding="view.templateStrings.asString" }}
 
-    <span class="node-text">
-    ({{ view.templateStrings.relative }})
-    </span>
+<span class="node-text">
+({{ view.templateStrings.relative }})
+</span>
 
-    <span class="node-detail node-icon">
-      {{partial "humon_icon"}}
-    </span>
+<span class="node-detail node-icon">
+  {{partial "humon_icon"}}
+</span>
 
-    <span class="node-detail">
-      {{view.templateStrings.verbose}}
-    </span>
+<span class="node-detail">
+  {{view.templateStrings.verbose}}
+</span>
+
+<span class="node-invalid-reason">
+  {{view.nodeContent.invalidReason}}
+</span>
