--- a/app/assets/stylesheets/humon/humon.css.scss
+++ b/app/assets/stylesheets/humon/humon.css.scss
@@ -9,7 +9,7 @@
   color: $copygray;
   position: relative;
   padding-left: $nodeWhiteIndent;
-  border: 0px transparent solid;
+  border: 1px transparent solid;
   border-left: $nodeBorderLeft;
   transition: all 300ms ease;
 }
@@ -70,6 +70,14 @@
 
     width: $childNodeGlyphWidth;
   }
+}
+
+
+/*
+ * Invalid node styling
+ */
+.node.invalid {
+  border-left: red solid;
 }
 
 @import "humon/debug";
