--- a/app/assets/javascripts/templates/humon_node_hash.hbs
+++ b/app/assets/javascripts/templates/humon_node_hash.hbs
@@ -1,4 +1,7 @@
 {{!  humon_node_hash.hbs }}
+<span class="node-invalid-reason">
+  {{view.nodeContent.invalidReason}}
+</span>
 {{#each nodeChild in view.nodeContent.nodeVal.children}}
   {{view Sysys.HumonNodeView nodeContentBinding="nodeChild"}}
 {{/each}}
