--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -20,6 +20,7 @@ $lineheight: 20px;
 $nodeWhiteIndent: 15px;
 $nodeLeftBorder: 4px;
 $fieldWhiteIndent: 15px;
+$errorRed: rgba(200, 40, 40, 1);
 
 @mixin imp {
   border: 1px solid red;
