Redo invalid node styling: always-visible red icon

--- a/app/assets/javascripts/templates/_humon_icon.hbs
+++ b/app/assets/javascripts/templates/_humon_icon.hbs
@@ -1,1 +1,1 @@
-<i {{bind-attr class="view.templateStrings.iconClass :fa"}} ></i>
+<i {{bind-attr class="view.templateStrings.iconClass :fa :icon-element"}} ></i>
