More styling changes for invalid. Invalid node has node icon overriden to red warning sign. Upon invalidation, disable template strings. Add logic for managing template strings

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -62,6 +62,8 @@ $childNodeGlyphColor: $grayLightest1;
 
 $nodeCopyColor: $copygray;
 $nodeActiveCopyColor: $grayDarkest1;
+$nodeDetailCopyColor: $grayLighter;
+$nodeActiveDetailCopyColor: $copygray;
 
 $nodeIdxCopyColor: lighten($nodeCopyColor, 15%);
 $nodeIdxActiveCopyColor: lighten($nodeActiveCopyColor, 15%);
