--- a/app/assets/javascripts/templates/_humon_node_debug.hbs
+++ b/app/assets/javascripts/templates/_humon_node_debug.hbs
@@ -25,9 +25,10 @@
   </dl>
 </span>
 
+<span class="node-detail node-type">{{view.nodeContent.nodeType}}</span>
 <span class="node-detail detail-debug">
-  {{view.nodeContent.nodeType}}
   <span class="debug-glyphs">
+    <i {{bind-attr class="view._templateStringsEnabled::template-strings-disabled"}}></i>
     <i {{bind-attr class="view._templateChanged:template-changed"}}></i>
     <i {{bind-attr class="view.nodeContent.notInitialized:not-initialized"}}></i>
     <i {{bind-attr class="view.nodeContent.nodeMeta:type-locked"}}></i>
