--- a/app/assets/stylesheets/humon/debug.css.scss
+++ b/app/assets/stylesheets/humon/debug.css.scss
@@ -1,14 +1,60 @@
 @import "app_base";
-.node.active > span.node-debug {
+.node.active > span.debug-auto-hide {
   visibility: visible;
 }
-
-.node-debug {
+.debug-auto-hide {
   visibility: hidden;
+}
+
+.node-debug-panel {
   position: relative;
   display: inline-block;
   position: fixed;
   right: 5px;
   bottom: 5px;
   font-size: 14px;
+}
+
+
+.debug-inline {
+  @include node-text;
+  float: right;
+  color: $nodeDetailCopyColor;
+}
+
+.debug-node-type {
+  position: absolute;
+  right: 10px;
+}
+
+.debug-glyphs {
+  float: right;
+  i {
+    font-style: normal;
+    position: relative;
+    width: 15px;
+    display: inline-block;
+    &:after {
+      position: absolute;
+      font-size: 70%;
+    }
+  }
+}
+
+.debug-glyphs i.template-strings-disabled:after {
+  content: "$!\" ";
+}
+.debug-glyphs i.template-changed:after {
+  content: "$Δ ";
+}
+
+.debug-glyphs i.not-initialized:after {
+  content: "@i ";
+}
+.debug-glyphs i.type-locked:after {
+  content: "@L ";
+}
+.debug-glyphs i.invalid:after {
+  content: "@! ";
+  color: $errorRed;
 }
