--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,12 @@
 <head>
   <title>Mongo</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= javascript_tag do %>
+    window._sp_vars = <%=raw  @server_side_vars.to_json if @server_side_vars %>;
+  <% end %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+
   <!-- mixpanel will be inserted here by the gem -->
 </head>
 
