Add Val Text Field styling. Change default styling for node-text() to vertical-align: top... and it works fine

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -83,6 +83,6 @@ $rootNodeKeyColor: darken($nodeCopyColor, 15%);
 
 @mixin node-text() {
   height: $lineheight;
-  vertical-align: bottom;
+  vertical-align: top;
   display: inline-block;
 }
