Huge css refactor. Add node .copy utility class; rename node-text mixin to node-text-mixni; reduce dependency on node-text-mixin

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -84,8 +84,9 @@ $rootNodeKeyColor: darken($nodeCopyColor, 15%);
   }
 }
 
-@mixin node-text() {
-  height: $lineheight;
+@mixin node-text-mixin($factor: 1) {
+  height: $lineheight * $factor;
+  font-size: $nodeCopyFontSize * $factor;
   vertical-align: top;
   display: inline-block;
 }
