--- a/app/assets/stylesheets/humon/bootstrap_node_defaults.css.scss
+++ b/app/assets/stylesheets/humon/bootstrap_node_defaults.css.scss
@@ -29,7 +29,7 @@ textarea,
 }
 
 .node {
-  .key-field:focus, .val-field:focus {
+  .idx-field:focus, .key-field:focus, .val-field:focus {
     outline: none;
   }
 }
