--- a/app/assets/stylesheets/humon/types/text.css.scss
+++ b/app/assets/stylesheets/humon/types/text.css.scss
@@ -15,7 +15,8 @@
   .content-field {
     vertical-align: top;
   }
-}
-.node-text-left {
-  display: inline-block;
+
+  .n-text-push-right {
+    display: inline-block;
+  }
 }
