--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -84,9 +84,20 @@ $rootNodeKeyColor: darken($nodeCopyColor, 15%);
   }
 }
 
-@mixin node-text-mixin($factor: 1) {
-  height: $lineheight * $factor;
+@mixin node_font_mx($factor: 1) {
   font-size: $nodeCopyFontSize * $factor;
+}
+@mixin node_text_structure_mx($factor: 1) {
+  @include node_font_mx($factor);
+  height: $lineheight * $factor;
   vertical-align: top;
+}
+@mixin node-text-mixin($factor: 1) {
+  @include node_text_inline_mx($factor);
+};
+
+@mixin node_text_inline_mx($factor: 1) {
+  @include node_text_structure_mx($factor);
   display: inline-block;
 }
+
