--- a/app/assets/stylesheets/humon/debug.css.scss
+++ b/app/assets/stylesheets/humon/debug.css.scss
@@ -1,3 +1,4 @@
+$nodeDebugInlineCopyColor: $nodeDetailCopyColor;
 .node.active > span.debug-auto-hide {
   visibility: visible;
 }
@@ -21,11 +22,9 @@
   font-size: 14px;
 }
 
-
 .debug-inline {
-  @include node-text-mixin();
+  color: $nodeDebugInlineCopyColor;
   float: right;
-  color: $nodeDetailCopyColor;
 }
 
 .debug-node-type {
