--- a/app/assets/stylesheets/humon/content_field.css.scss
+++ b/app/assets/stylesheets/humon/content_field.css.scss
@@ -4,7 +4,7 @@
  */
 .node {
   .content-field {
-    @include node-text-mixin();
+    @include node_text_inline_mx();
 
     border-bottom: $borderLightUnderline;
     border-left: $borderTransparent;
